tests/fsharp/typecheck/sigs/neg102.bsl

\Users\jwostenberg\Code\FSharp\visualfsharp\tests\fsharp\typecheck\sigs\neg102.fs(8,14,8,22): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'enum<EnumAB> (1)' may indicate a case not covered by the pattern(s).

\Users\jwostenberg\Code\FSharp\visualfsharp\tests\fsharp\typecheck\sigs\neg102.fs(11,14,11,22): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value 'B' may indicate a case not covered by the pattern(s).

\Users\jwostenberg\Code\FSharp\visualfsharp\tests\fsharp\typecheck\sigs\neg102.fs(14,14,14,22): typecheck error FS0025: Incomplete pattern matches on this expression. For example, the value '0' may indicate a case not covered by the pattern(s).

typecheck error FS0104: Enums may take values outside known cases. For example, the value 'enum<EnumAB> (2)' may indicate a case not covered by the pattern(s).

typecheck error FS0104: Enums may take values outside known cases. For example, the value 'Some (enum<EnumAB> (2))' may indicate a case not covered by the pattern(s).
